# staples-plugin

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CONTEXT.md  CONVERSION_SUMMARY.md  CUSTOMER_NUMBER_AND_JSON_PROCESSING.md  CUSTOMER_NUMBER_IMPLEMENTATION.md  DOWNLOAD_TIMING_FIX.md  FILENAME_FORMAT.md  JSON_FORMAT_UPDATE.md  POPUP_FEATURES.md  README.md  README_ORDERS.md  SPA_NAVIGATION_FIX.md  TEST_SPA_NAVIGATION.md  background.js  content.js  convert_orders.py  download_staples.py  jest.config.js  manifest.json  orders_20251016_205231.tsv  orders_20251016_205231.xlsx  orders_20251016_210016.xlsx  orders_20251016_211437.xlsx  orders_20251016_212030.tsv  orders_20251016_212030.xlsx  orders_all_profiles_20251018_140341.xlsx  package.json  popup.css  popup.html  popup.js  pyproject.toml  staples_instore_orders_russ.json  staples_online_orders_russ.json  test.json  (+6 more)
data/: items.tsv  items_cleaned.tsv  items_final.tsv  orders-instore-page-4.json  orders_all_profiles_20251018_144021.xlsx  orders_all_profiles_20251020_224039.xlsx  ~$orders_all_profiles_20251018_144021.xlsx
eslint-rules/: max-lines-warning.js
henry/: staples_instore_orders_with_detail_2026_02_24.json
lana/: staples_instore_orders_with_detail_2026_02_23.json  staples_instore_orders_with_detail_2026_02_24.json
meina/: staples_instore_orders_with_detail_2026_02_23.json  staples_online_orders_with_detail_2026_02_23.json
russ/: staples_instore_orders_with_detail_2026_02_24.json  staples_online_orders_with_detail_2026_02_24.json
src/: coordinator.js
(+1336 files in other folders)
