[project]
name = "staples-downloader"
version = "0.1.0"
description = "Staples receipt and order downloader"
authors = [
    {name = "Russ"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
